Kubernetes/k8s/service-product.yml
kind: Service
apiVersion: v1
metadata:
  name: product-service
spec:
  selector:
    app: product
  type: ClusterIP
  ports:
    - name: product-service-port
      port: 80
      targetPort: 8080
